[FRON-357] fix file browser overflow (#554)

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 2rem 0 2rem;
-  flex: 0;
 }
 
 .base.hasSubheader {
