--- a/frontend/src/views/FileBrowser/FileBrowser.module.css
+++ b/frontend/src/views/FileBrowser/FileBrowser.module.css
@@ -2,6 +2,8 @@
   margin: -1rem;
   height: 100vh;
   background-color: var(--background-grey);
+  display: flex;
+  flex-direction: column;
 }
 
 .subHeader {
