--- a/frontend/src/views/FileBrowser/components/ListViewTable/ListViewTable.module.css
+++ b/frontend/src/views/FileBrowser/components/ListViewTable/ListViewTable.module.css
@@ -4,7 +4,7 @@
 }
 
 .scrolling {
-  max-height: calc(100vh - var(--header-height));
+  flex: 1;
   overflow: auto;
   scrollbar-width: none;
 }
